--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,9 @@ a:hover, a:focus {
 a:active {
   color: var(--green);
 }
+ul {
+  margin-top: 50px;
+}
 
 #logo__header {
   height: 70px;
@@ -81,4 +84,24 @@ a:active {
 
 .page-header__item {
   flex: 0 1 200px;
+}
+
+.pokeButton {
+  width: 200px;
+  padding: 10px;
+  margin: 5px auto;
+  border-radius: 4px;
+  background-color: #DCDCDC;
+
+}
+
+.pokemon-list {
+  width: 250px;
+  list-style-type: none;
+  background-color: white;
+  border-style: solid;
+  border-color: #dcdcdc;
+  border-width: 2px;
+  display: block;
+  align-items: center;
 }
