--- a/css/styles.css
+++ b/css/styles.css
@@ -65,10 +65,7 @@ a:hover, a:focus {
 a:active {
   color: var(--green);
 }
-ul {
-  width: 250px;
-  margin-top: 0px auto;
-}
+
 
 #logo__header {
   height: 70px;
@@ -89,18 +86,18 @@ ul {
   margin: 5px auto;
   border-radius: 4px;
   background-color: #DCDCDC;
-
 }
 
 .pokemon-list {
-  width: 250px;
+  width: 200px;
   list-style-type: none;
   background-color: var(--white);
   border-style: solid;
   border-color: #dcdcdc;
   border-width: 2px;
-  display: block;
-  margin: 0 auto;
+  margin: 20px auto;
+  padding-right: 40px;
+  text-align: center;
 }
 
 
